[gd_scene load_steps=23 format=3 uid="uid://3oa14w4m8khu"]

[ext_resource type="Script" uid="uid://bfp187jtd03hv" path="res://skriptit/animatic.gd" id="1_ktwnp"]
[ext_resource type="AudioStream" uid="uid://maub0dna6weo" path="res://audio/animatic/frame1.mp3" id="2_etvig"]
[ext_resource type="AudioStream" uid="uid://bbi2nggmain0o" path="res://audio/animatic/frame2.mp3" id="3_m4dui"]
[ext_resource type="Texture2D" uid="uid://b8cydfpi4ba6r" path="res://grafiikka/OhjainTooltipB.png" id="3_qbm57"]
[ext_resource type="AudioStream" uid="uid://dewbk7fpjyh6t" path="res://audio/animatic/frame3.mp3" id="4_077w6"]
[ext_resource type="Texture2D" uid="uid://tjr5y6tghm7u" path="res://grafiikka/OhjainTooltipA.png" id="4_mjejl"]
[ext_resource type="AudioStream" uid="uid://cgpal3tn5wy6f" path="res://audio/animatic/frame4.mp3" id="5_fqiyh"]
[ext_resource type="AudioStream" uid="uid://dhtk33q1buiqv" path="res://audio/animatic/frame5.mp3" id="6_tyjhu"]
[ext_resource type="Texture2D" uid="uid://dck46s7usxcdd" path="res://grafiikka/Frame1.png" id="7_a623f"]
[ext_resource type="Texture2D" uid="uid://dhtbwooqknaag" path="res://grafiikka/Frame2.png" id="8_wa757"]
[ext_resource type="Texture2D" uid="uid://ba8spijhuvdg3" path="res://grafiikka/Frame3.png" id="9_iif62"]
[ext_resource type="Texture2D" uid="uid://cd28rac8nigcg" path="res://grafiikka/Frame4.png" id="10_q0cmt"]
[ext_resource type="Texture2D" uid="uid://ds07m6o0d7yls" path="res://grafiikka/TitleScreen.png" id="10_xrtko"]
[ext_resource type="Texture2D" uid="uid://4lacgif1d521" path="res://grafiikka/Frame5.png" id="11_7xswd"]
[ext_resource type="Texture2D" uid="uid://b5c7eaqua1a08" path="res://grafiikka/Frame6.png" id="12_xycnc"]
[ext_resource type="AudioStream" uid="uid://mliddj5gx3kl" path="res://audio/pelaaja/falldamage.mp3" id="13_oygfy"]
[ext_resource type="AudioStream" uid="uid://506crs6qjykn" path="res://audio/musiikki/title_musiikki.mp3" id="16_l5qh4"]
[ext_resource type="AudioStream" uid="uid://ce76aok2dmtc4" path="res://audio/musiikki/Beneath_the_Mines.mp3" id="17_b6yh4"]

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_qf5wa"]
pressed = true

[sub_resource type="Shortcut" id="Shortcut_x6vxs"]
events = [SubResource("InputEventJoypadButton_qf5wa")]

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_1sd5o"]
button_index = 1
pressed = true

[sub_resource type="Shortcut" id="Shortcut_8wad5"]
events = [SubResource("InputEventJoypadButton_1sd5o")]

[node name="Animatic" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ktwnp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 491.0
offset_right = 961.0
offset_bottom = 538.0

[node name="next_nappi" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 864.0
offset_right = 959.0
offset_bottom = 47.0
shortcut = SubResource("Shortcut_x6vxs")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Next
"

[node name="skip_nappi" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 428.0
offset_right = 535.0
offset_bottom = 48.0
shortcut = SubResource("Shortcut_8wad5")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Skip"

[node name="quit_nappi" type="Button" parent="Panel"]
layout_mode = 0
offset_right = 84.0
offset_bottom = 47.0
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Quit Game"

[node name="TextureRect2" type="TextureRect" parent="Panel"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 541.0
offset_top = -16.0
offset_right = 573.0
offset_bottom = 16.0
grow_vertical = 2
texture = ExtResource("3_qbm57")
stretch_mode = 2

[node name="TextureRect3" type="TextureRect" parent="Panel"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 827.0
offset_top = -15.5
offset_right = 859.0
offset_bottom = 16.5
grow_vertical = 2
texture = ExtResource("4_mjejl")
stretch_mode = 2

[node name="kuvat" type="Node" parent="."]
unique_name_in_owner = true

[node name="kuva1" type="Sprite2D" parent="kuvat"]
visible = false
light_mask = 2
visibility_layer = 2
position = Vector2(481, 218)
texture = ExtResource("7_a623f")

[node name="kuva2" type="Sprite2D" parent="kuvat"]
visible = false
position = Vector2(480, 220)
texture = ExtResource("8_wa757")

[node name="kuva3" type="Sprite2D" parent="kuvat"]
visible = false
position = Vector2(480, 220)
texture = ExtResource("9_iif62")

[node name="kuva4" type="Sprite2D" parent="kuvat"]
visible = false
position = Vector2(480, 220)
texture = ExtResource("10_q0cmt")

[node name="kuva5" type="Sprite2D" parent="kuvat"]
visible = false
position = Vector2(480, 220)
texture = ExtResource("11_7xswd")

[node name="kuva6" type="Sprite2D" parent="kuvat"]
visible = false
position = Vector2(480, 220)
texture = ExtResource("12_xycnc")

[node name="title_screen" type="Sprite2D" parent="kuvat"]
visible = false
position = Vector2(480.5, 245)
scale = Vector2(1.00104, 0.907407)
texture = ExtResource("10_xrtko")

[node name="aanet" type="Node" parent="."]
unique_name_in_owner = true

[node name="frame1" type="AudioStreamPlayer" parent="aanet"]
stream = ExtResource("2_etvig")

[node name="frame2" type="AudioStreamPlayer" parent="aanet"]
stream = ExtResource("3_m4dui")

[node name="frame3" type="AudioStreamPlayer" parent="aanet"]
stream = ExtResource("4_077w6")

[node name="frame4" type="AudioStreamPlayer" parent="aanet"]
stream = ExtResource("5_fqiyh")

[node name="frame5" type="AudioStreamPlayer" parent="aanet"]
stream = ExtResource("6_tyjhu")

[node name="frame6" type="AudioStreamPlayer" parent="aanet"]
stream = ExtResource("13_oygfy")

[node name="title_musiikki" type="AudioStreamPlayer" parent="aanet"]
unique_name_in_owner = true
stream = ExtResource("16_l5qh4")

[node name="animatic_musiikki" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("17_b6yh4")

[connection signal="pressed" from="Panel/next_nappi" to="." method="_on_next_nappi_pressed"]
[connection signal="pressed" from="Panel/skip_nappi" to="." method="_on_skip_nappi_pressed"]
[connection signal="pressed" from="Panel/quit_nappi" to="." method="_on_quit_nappi_pressed"]
